--- a/perceptron03.ipynb
+++ b/perceptron03.ipynb
@@ -2,14 +2,67 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n"
+      "Peso atualizado $0.0\n",
+      "Peso atualizado $0.0\n",
+      "Peso atualizado $0.0\n",
+      "Peso atualizado $0.0\n",
+      "Peso atualizado $0.0\n",
+      "Peso atualizado $0.0\n",
+      "Peso atualizado $0.1\n",
+      "Peso atualizado $0.1\n",
+      "Total de erros $1\n",
+      "Peso atualizado $0.1\n",
+      "Peso atualizado $0.1\n",
+      "Peso atualizado $0.1\n",
+      "Peso atualizado $0.1\n",
+      "Peso atualizado $0.1\n",
+      "Peso atualizado $0.1\n",
+      "Peso atualizado $0.2\n",
+      "Peso atualizado $0.2\n",
+      "Total de erros $1\n",
+      "Peso atualizado $0.2\n",
+      "Peso atualizado $0.2\n",
+      "Peso atualizado $0.2\n",
+      "Peso atualizado $0.2\n",
+      "Peso atualizado $0.2\n",
+      "Peso atualizado $0.2\n",
+      "Peso atualizado $0.30000000000000004\n",
+      "Peso atualizado $0.30000000000000004\n",
+      "Total de erros $1\n",
+      "Peso atualizado $0.30000000000000004\n",
+      "Peso atualizado $0.30000000000000004\n",
+      "Peso atualizado $0.30000000000000004\n",
+      "Peso atualizado $0.30000000000000004\n",
+      "Peso atualizado $0.30000000000000004\n",
+      "Peso atualizado $0.30000000000000004\n",
+      "Peso atualizado $0.4\n",
+      "Peso atualizado $0.4\n",
+      "Total de erros $1\n",
+      "Peso atualizado $0.4\n",
+      "Peso atualizado $0.4\n",
+      "Peso atualizado $0.4\n",
+      "Peso atualizado $0.4\n",
+      "Peso atualizado $0.4\n",
+      "Peso atualizado $0.4\n",
+      "Peso atualizado $0.5\n",
+      "Peso atualizado $0.5\n",
+      "Total de erros $1\n",
+      "Peso atualizado $0.5\n",
+      "Peso atualizado $0.5\n",
+      "Peso atualizado $0.5\n",
+      "Peso atualizado $0.5\n",
+      "Peso atualizado $0.5\n",
+      "Peso atualizado $0.5\n",
+      "Peso atualizado $0.5\n",
+      "Peso atualizado $0.5\n",
+      "Total de erros $0\n"
      ]
     }
    ],
@@ -17,25 +70,39 @@
     "# Operação and\n",
     "import numpy as np\n",
     "\n",
-    "entradas = np.array([0, 0], [0, 1], [1, 0], [1, 1])\n",
+    "entradas = np.array([[0, 0], [0, 1], [1, 0], [1, 1]])\n",
     "saidas = np.array([0, 0, 0, 1])\n",
     "pesos = np.array([0.0, 0.0])\n",
     "taxaAprendizagem = 0.1\n",
     "\n",
     "\n",
     "def stepFunction(soma):\n",
-    "    if soma > 1:\n",
+    "    if soma >= 1:\n",
     "        return 1\n",
     "    return 0\n",
     "\n",
+    "\n",
     "def calculaSaida(registro):\n",
+    "    # faz o produto dentre registro e peso\n",
     "    s = registro.dot(pesos)\n",
     "    return stepFunction(s)\n",
     "\n",
     "\n",
     "def treinar():\n",
-    "    return 0\n",
-    "\n"
+    "    erroTotal = 1\n",
+    "    while erroTotal != 0:\n",
+    "        erroTotal = 0\n",
+    "        for i in range(len(saidas)):\n",
+    "            saidaCalculada = calculaSaida(np.asarray(entradas[i]))\n",
+    "            erro = abs(saidas[i] - saidaCalculada)\n",
+    "            erroTotal += erro\n",
+    "            for j in range(len(pesos)):\n",
+    "                #atualizando peso de acordo com taxa de aprendizado e formula do erro\n",
+    "                pesos[j] = pesos[j] + (taxaAprendizagem * entradas[i][j] * erro)\n",
+    "                print(f\"Peso atualizado ${pesos[j]}\")\n",
+    "        print(f\"Total de erros ${erroTotal}\")\n",
+    "\n",
+    "treinar()"
    ]
   }
  ],
