feat: testando com entras e saidas relativas a operação OR

--- a/perceptron03.ipynb
+++ b/perceptron03.ipynb
@@ -70,8 +70,13 @@
     "# Operação and\n",
     "import numpy as np\n",
     "\n",
+    "# entradas do AND\n",
+    "# entradas = np.array([[0, 0], [0, 1], [1, 0], [1, 1]])\n",
+    "# saidas = np.array([0, 0, 0, 1])\n",
+    "\n",
+    "# entrdas do OR\n",
     "entradas = np.array([[0, 0], [0, 1], [1, 0], [1, 1]])\n",
-    "saidas = np.array([0, 0, 0, 1])\n",
+    "saidas = np.array([0, 1, 1, 1])\n",
     "pesos = np.array([0.0, 0.0])\n",
     "taxaAprendizagem = 0.1\n",
     "\n",
@@ -97,10 +102,11 @@
     "            erro = abs(saidas[i] - saidaCalculada)\n",
     "            erroTotal += erro\n",
     "            for j in range(len(pesos)):\n",
-    "                #atualizando peso de acordo com taxa de aprendizado e formula do erro\n",
+    "                # atualizando peso de acordo com taxa de aprendizado e formula do erro\n",
     "                pesos[j] = pesos[j] + (taxaAprendizagem * entradas[i][j] * erro)\n",
     "                print(f\"Peso atualizado ${pesos[j]}\")\n",
     "        print(f\"Total de erros ${erroTotal}\")\n",
+    "\n",
     "\n",
     "treinar()"
    ]
