feat: fazendo calculo da camada oculta com pesos da saida para obeter o valor final

--- a/sigmoid/rede_multicamada.ipynb
+++ b/sigmoid/rede_multicamada.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,30 +11,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Não retorna valores negativos\n",
     "def sigmoid(soma):\n",
     "    return 1 / (1 + np.exp(-soma))"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "entradas = np.array(\n",
+    "    [\n",
+    "        [0, 0],\n",
+    "        [0, 1],\n",
+    "        [1, 0],\n",
+    "        [1, 1],\n",
+    "    ],\n",
+    ")\n",
+    "\n",
+    "\n",
+    "saidas = np.array(\n",
+    "    [\n",
+    "        [0],\n",
+    "        [1],\n",
+    "        [1],\n",
+    "        [0],\n",
+    "    ],\n",
+    ")\n",
+    "\n",
+    "peso0 = (\n",
+    "    np.array(\n",
+    "        [\n",
+    "            [-0.424, -0.740, -0.961],\n",
+    "            [0.358, -0.577, -0.469],\n",
+    "        ]\n",
+    "    ),\n",
+    ")  # pesos da camada de entrada\n",
+    "\n",
+    "peso1 = (\n",
+    "    np.array(\n",
+    "        [\n",
+    "            [-0.017],\n",
+    "            [-0.893],\n",
+    "            [0.148],\n",
+    "        ],\n",
+    "    ),\n",
+    ")  # pesos da camada oculta"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epocas = 100\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.0\n"
+      "camadaOculta: [[[[0.40588573]]]\n",
+      "\n",
+      "\n",
+      " [[[0.43187857]]]\n",
+      "\n",
+      "\n",
+      " [[[0.43678536]]]\n",
+      "\n",
+      "\n",
+      " [[[0.45801216]]]]\n"
      ]
     }
    ],
    "source": [
-    "a =sigmoid(50)\n",
-    "print(a)"
+    "for j in range(1):\n",
+    "    camadaEntrada = entradas\n",
+    "    somaSinapse0 = np.dot(camadaEntrada, peso0)\n",
+    "    camadaOculta = sigmoid(somaSinapse0)\n",
+    "\n",
+    "    somaSinapse1 = np.dot(camadaOculta, peso1)\n",
+    "    camadaSaida = sigmoid(somaSinapse1)\n",
+    "    print(f\"camadaOculta: {camadaSaida}\")"
    ]
   }
  ],
