feat:calculando erro

--- a/sigmoid/rede_multicamada.ipynb
+++ b/sigmoid/rede_multicamada.ipynb
@@ -76,27 +76,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "camadaOculta: [[[[0.40588573]]]\n",
-      "\n",
-      "\n",
-      " [[[0.43187857]]]\n",
-      "\n",
-      "\n",
-      " [[[0.43678536]]]\n",
-      "\n",
-      "\n",
-      " [[[0.45801216]]]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "#Treinamento\n",
     "for j in range(1):\n",
     "    camadaEntrada = entradas\n",
     "    somaSinapse0 = np.dot(camadaEntrada, peso0)\n",
@@ -104,7 +88,31 @@
     "\n",
     "    somaSinapse1 = np.dot(camadaOculta, peso1)\n",
     "    camadaSaida = sigmoid(somaSinapse1)\n",
-    "    print(f\"camadaOculta: {camadaSaida}\")"
+    "    \n",
+    "\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "camadaOculta: 0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculo do erro\n",
+    "erroCamadaSaida = saidas - camadaSaida\n",
+    "\n",
+    "#Calculo da media\n",
+    "mediaAbsoluta = np.mean(np.abs(erroCamadaSaida))\n",
+    "print(f\"camadaOculta: {mediaAbsoluta}\")"
    ]
   }
  ],
