feat: calculando a derivada parical da função sigmoid

--- a/sigmoid/rede_multicamada.ipynb
+++ b/sigmoid/rede_multicamada.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,13 +11,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Não retorna valores negativos\n",
     "def sigmoid(soma):\n",
     "    return 1 / (1 + np.exp(-soma))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sigmoide com derivada parcial\n",
+    "def sigmoidDerivada(sig):\n",
+    "    return sig * (1 - sig)"
    ]
   },
   {
