fix: ajudando pesos

--- a/sigmoid/rede_multicamada.ipynb
+++ b/sigmoid/rede_multicamada.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,18 +22,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Sigmoide com derivada parcial\n",
+    "# Sigmoide com derivada\n",
     "def sigmoidDerivada(sig):\n",
     "    return sig * (1 - sig)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,30 +55,16 @@
     "        [0],\n",
     "    ],\n",
     ")\n",
+    "# pesos da camada de entrada\n",
+    "peso0 = np.array([[-0.424, -0.740, -0.961], [0.358, -0.577, -0.469]])\n",
     "\n",
-    "peso0 = (\n",
-    "    np.array(\n",
-    "        [\n",
-    "            [-0.424, -0.740, -0.961],\n",
-    "            [0.358, -0.577, -0.469],\n",
-    "        ]\n",
-    "    ),\n",
-    ")  # pesos da camada de entrada\n",
-    "\n",
-    "peso1 = (\n",
-    "    np.array(\n",
-    "        [\n",
-    "            [-0.017],\n",
-    "            [-0.893],\n",
-    "            [0.148],\n",
-    "        ],\n",
-    "    ),\n",
-    ")  # pesos da camada oculta"
+    "# pesos da camada oculta\n",
+    "peso1 = np.array([[-0.017], [-0.893], [0.148]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,14 +92,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "camadaOculta: 0.5\n"
+      "camadaOculta: 0.49880848923713045\n"
      ]
     }
    ],
