feat: calculando delta e implmentando a derivada

--- a/sigmoid/rede_multicamada.ipynb
+++ b/sigmoid/rede_multicamada.ipynb
@@ -111,6 +111,20 @@
     "mediaAbsoluta = np.mean(np.abs(erroCamadaSaida))\n",
     "print(f\"camadaOculta: {mediaAbsoluta}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculo da derivada\n",
+    "derivadaSaida = sigmoidDerivada(camadaSaida)\n",
+    "\n",
+    "# Calculo do delta\n",
+    "deltaSaida = erroCamadaSaida * derivadaSaida\n",
+    "print(f\"deltaSaida: {deltaSaida}\")"
+   ]
   }
  ],
  "metadata": {
