feat: adicionado variaveis, momento e taxa de aprendizagem

--- a/sigmoid/rede_multicamada.ipynb
+++ b/sigmoid/rede_multicamada.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,16 +64,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "epocas = 100\n"
+    "epocas = 100\n",
+    "taxaAprendizagem = 0.3\n",
+    "momento = 1\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,8 +124,38 @@
     "derivadaSaida = sigmoidDerivada(camadaSaida)\n",
     "\n",
     "# Calculo do delta\n",
-    "deltaSaida = erroCamadaSaida * derivadaSaida\n",
-    "print(f\"deltaSaida: {deltaSaida}\")"
+    "deltaSaida = erroCamadaSaida * derivadaSaida"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Calculando delta da camada oculta\n",
+    "peso1Transposto = peso1.T\n",
+    "deltaSaidaXPeso = deltaSaida.dot(peso1Transposto)\n",
+    "deltaCamadaOculta = deltaSaidaXPeso * sigmoidDerivada(camadaOculta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "peso1: [[-0.00711903]\n",
+      " [-0.88642447]\n",
+      " [ 0.15432644]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n"
    ]
   }
  ],
