feat: implementado ajustes de pesos com backpropagation

--- a/sigmoid/rede_multicamada.ipynb
+++ b/sigmoid/rede_multicamada.ipynb
@@ -155,7 +155,11 @@
     }
    ],
    "source": [
-    "\n"
+    "#Backpropagation - Atualização dos pesos da camada oculta\n",
+    "camadaOcultaTransposta = camadaOculta.T\n",
+    "pesoNovo1 = camadaOcultaTransposta.dot(deltaSaida)\n",
+    "peso1 = peso1 * momento + (pesoNovo1 * taxaAprendizagem)\n",
+    "print(f\"peso1: {peso1}\")\n"
    ]
   }
  ],
