feat: fazendo ajustes de pesos na entrada com backpropagation

--- a/sigmoid/rede_multicamada.ipynb
+++ b/sigmoid/rede_multicamada.ipynb
@@ -141,25 +141,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "peso1: [[-0.00711903]\n",
-      " [-0.88642447]\n",
-      " [ 0.15432644]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Backpropagation - Atualização dos pesos da camada oculta\n",
     "camadaOcultaTransposta = camadaOculta.T\n",
     "pesoNovo1 = camadaOcultaTransposta.dot(deltaSaida)\n",
     "peso1 = peso1 * momento + (pesoNovo1 * taxaAprendizagem)\n",
-    "print(f\"peso1: {peso1}\")\n"
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Backpropagation - Atualização dos pesos da camada de entrada\n",
+    "camadaEntradaTransposta = camadaEntrada.T\n",
+    "pesoNovo0 = camadaEntradaTransposta.dot(deltaCamadaOculta)\n",
+    "peso0 = peso0 * momento + (pesoNovo0 * taxaAprendizagem)\n",
+    "print(f\"peso0: {peso0}\")\n"
    ]
   }
  ],
