refactor: juntando tudo no for

--- a/sigmoid/rede_multicamada.ipynb
+++ b/sigmoid/rede_multicamada.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,23 +64,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
-    "epocas = 100\n",
+    "epocas = 1000000\n",
     "taxaAprendizagem = 0.3\n",
     "momento = 1\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Erro: 0.006978762880311354\n"
+     ]
+    }
+   ],
    "source": [
     "#Treinamento\n",
-    "for j in range(1):\n",
+    "for j in range(epocas):\n",
     "    camadaEntrada = entradas\n",
     "    somaSinapse0 = np.dot(camadaEntrada, peso0)\n",
     "    camadaOculta = sigmoid(somaSinapse0)\n",
@@ -88,81 +96,36 @@
     "    somaSinapse1 = np.dot(camadaOculta, peso1)\n",
     "    camadaSaida = sigmoid(somaSinapse1)\n",
     "    \n",
+    "    # Calculo do erro\n",
+    "    erroCamadaSaida = saidas - camadaSaida\n",
     "\n",
-    "  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "camadaOculta: 0.49880848923713045\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Calculo do erro\n",
-    "erroCamadaSaida = saidas - camadaSaida\n",
+    "    #Calculo da media\n",
+    "    mediaAbsoluta = np.mean(np.abs(erroCamadaSaida))\n",
+    "    if(j ==999999):\n",
+    "        print(f\"Erro: {mediaAbsoluta}\")\n",
+    "  \n",
+    "    # Calculo da derivada\n",
+    "    derivadaSaida = sigmoidDerivada(camadaSaida)\n",
     "\n",
-    "#Calculo da media\n",
-    "mediaAbsoluta = np.mean(np.abs(erroCamadaSaida))\n",
-    "print(f\"camadaOculta: {mediaAbsoluta}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Calculo da derivada\n",
-    "derivadaSaida = sigmoidDerivada(camadaSaida)\n",
+    "    # Calculo do delta\n",
+    "    deltaSaida = erroCamadaSaida * derivadaSaida  \n",
     "\n",
-    "# Calculo do delta\n",
-    "deltaSaida = erroCamadaSaida * derivadaSaida"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Calculando delta da camada oculta\n",
-    "peso1Transposto = peso1.T\n",
-    "deltaSaidaXPeso = deltaSaida.dot(peso1Transposto)\n",
-    "deltaCamadaOculta = deltaSaidaXPeso * sigmoidDerivada(camadaOculta)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Backpropagation - Atualização dos pesos da camada oculta\n",
-    "camadaOcultaTransposta = camadaOculta.T\n",
-    "pesoNovo1 = camadaOcultaTransposta.dot(deltaSaida)\n",
-    "peso1 = peso1 * momento + (pesoNovo1 * taxaAprendizagem)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Backpropagation - Atualização dos pesos da camada de entrada\n",
-    "camadaEntradaTransposta = camadaEntrada.T\n",
-    "pesoNovo0 = camadaEntradaTransposta.dot(deltaCamadaOculta)\n",
-    "peso0 = peso0 * momento + (pesoNovo0 * taxaAprendizagem)\n",
-    "print(f\"peso0: {peso0}\")\n"
+    "    #Calculando delta da camada oculta\n",
+    "    peso1Transposto = peso1.T\n",
+    "    deltaSaidaXPeso = deltaSaida.dot(peso1Transposto)\n",
+    "    deltaCamadaOculta = deltaSaidaXPeso * sigmoidDerivada(camadaOculta)  \n",
+    "\n",
+    "    #Backpropagation - Atualização dos pesos da camada oculta\n",
+    "    camadaOcultaTransposta = camadaOculta.T\n",
+    "    pesoNovo1 = camadaOcultaTransposta.dot(deltaSaida)\n",
+    "    peso1 = peso1 * momento + (pesoNovo1 * taxaAprendizagem)\n",
+    "\n",
+    "    #Backpropagation - Atualização dos pesos da camada de entrada\n",
+    "    camadaEntradaTransposta = camadaEntrada.T\n",
+    "    pesoNovo0 = camadaEntradaTransposta.dot(deltaCamadaOculta)\n",
+    "    peso0 = peso0 * momento + (pesoNovo0 * taxaAprendizagem)\n",
+    " \n",
+    "print(f\"Saida: {camadaSaida}\")"
    ]
   }
  ],
