--- a/sigmoid/rede_multicamada.ipynb
+++ b/sigmoid/rede_multicamada.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,33 +56,40 @@
     "    ],\n",
     ")\n",
     "# pesos da camada de entrada\n",
-    "peso0 = np.array([[-0.424, -0.740, -0.961], [0.358, -0.577, -0.469]])\n",
-    "\n",
+    "# peso0 = np.array([[-0.424, -0.740, -0.961], [0.358, -0.577, -0.469]])\n",
+    "# pesos randomicos da camada de entrada\n",
+    "peso0 = 2* np.random.random(2, 3)-1\n",
     "# pesos da camada oculta\n",
-    "peso1 = np.array([[-0.017], [-0.893], [0.148]])"
+    "# peso1 = np.array([[-0.017], [-0.893], [0.148]])\n",
+    "# pesos randomicos da camada oculta\n",
+    "peso1 = 2* np.random.random(3, 1)-1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
     "epocas = 1000000\n",
-    "taxaAprendizagem = 0.3\n",
+    "taxaAprendizagem = 0.6\n",
     "momento = 1\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Erro: 0.006978762880311354\n"
+      "Erro: 0.002344346815762123\n",
+      "Saida: [[4.06243523e-03]\n",
+      " [9.97571821e-01]\n",
+      " [9.97571894e-01]\n",
+      " [4.58667311e-04]]\n"
      ]
     }
    ],
